--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,5 +1,5 @@
 name: FakeInventories
-version: "1.0.3"
+version: "1.0.3-PM1E"
 api: ["1.0.7"]
 author: SupremeMortal
 description: Create fake inventories
