--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     <groupId>com.nukkitx</groupId>
     <artifactId>FakeInventories</artifactId>
     <name>Fake Inventories</name>
-    <version>1.0.3-PM1E</version>
+    <version>1.0.3-PM1E.2</version>
 
     <licenses>
         <license>
@@ -76,7 +76,7 @@
             <artifactId>nukkit</artifactId>
             <version>1.0-SNAPSHOT</version>
             <scope>system</scope>
-            <systemPath>${basedir}/Nukkit-PM1E.jar</systemPath>
+            <systemPath>${basedir}/patched.jar</systemPath>
         </dependency>
     </dependencies>
 </project>
